--- a/produit-service.properties
+++ b/produit-service.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:h2:mem:produit-db
+spring.h2.console.enabled=true
+management.endpoints.web.exposure.include=health,refresh
+mes-config-ms.produits-last=20
