--- a/commande-service.properties
+++ b/commande-service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:account-db
+spring.datasource.url=jdbc:h2:mem:commande-db
 spring.h2.console.enabled=true
 mes-config-ms.commandes-last=10
 management.endpoints.web.exposure.include=health,refresh
